infrastructure/notifications-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-api
  template:
    metadata:
      labels:
        app: notifications-api
    spec:
      containers:
      - name: notifications-api
        image: infrastructure-notifications-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5179
