infrastructure/notifications-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notifications-postgres
spec:
  serviceName: notifications-postgres
  replicas: 1
  selector:
    matchLabels:
      app: notifications-postgres
  template:
    metadata:
      labels:
        app: notifications-postgres
    spec:
      containers:
      - name: notifications-postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: notifications-postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: notifications-postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
