infrastructure/subscriptions-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptions-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscriptions-api
  template:
    metadata:
      labels:
        app: subscriptions-api
    spec:
      containers:
      - name: subscriptions-api
        image: infrastructure_subscriptions-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5177
