infrastructure/notifications-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-api
spec:
  selector:
    app: notifications-api
  ports:
  - port: 5179
    targetPort: 5179
