infrastructure/notifications-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-postgres
spec:
  selector:
    app: notifications-postgres
  ports:
  - port: 5432
    targetPort: 5432
