infrastructure/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
    - port: 80
      targetPort: 4180
  selector:
    app: oauth2-proxy
