infrastructure/subscriptions-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscriptions-api
spec:
  selector:
    app: subscriptions-api
  ports:
  - port: 5177
    targetPort: 5177
