infrastructure/subscriptions-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscriptions-postgres
spec:
  selector:
    app: subscriptions-postgres
  ports:
  - port: 5432
    targetPort: 5432
